[gd_scene load_steps=15 format=3 uid="uid://dnij3jwk3tqwh"]

[ext_resource type="Texture2D" uid="uid://cyb6f61mrfr78" path="res://assets/gfx/entities/boombox.png" id="1_vnh7m"]
[ext_resource type="Script" uid="uid://csrsrdxpb5aa5" path="res://src/entities/boombox.gd" id="2_dmb4f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dmb4f"]
atlas = ExtResource("1_vnh7m")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaj65"]
atlas = ExtResource("1_vnh7m")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpgk4"]
atlas = ExtResource("1_vnh7m")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_miru0"]
atlas = ExtResource("1_vnh7m")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnh7m"]
atlas = ExtResource("1_vnh7m")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6hfj"]
atlas = ExtResource("1_vnh7m")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_42518"]
atlas = ExtResource("1_vnh7m")
region = Rect2(128, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_s6hfj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmb4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaj65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpgk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miru0")
}],
"loop": false,
"name": &"boomin",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnh7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6hfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42518")
}],
"loop": false,
"name": &"press",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dmb4f"]
size = Vector2(65, 50)

[sub_resource type="Animation" id="Animation_4jn58"]
resource_name = "shake"
length = 0.26667002
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.26666668),
"transitions": PackedFloat32Array(1, 2.8284273, 1, 3.249009, 1),
"update": 0,
"values": [0.0, -0.17453292519943295, 0.0, 0.17453292519943295, 0.0]
}

[sub_resource type="Animation" id="Animation_whv8p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o0tlu"]
_data = {
&"RESET": SubResource("Animation_whv8p"),
&"shake": SubResource("Animation_4jn58")
}

[node name="BoomBox" type="AnimatedSprite2D"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_s6hfj")
animation = &"boomin"
frame = 3
frame_progress = 1.0
script = ExtResource("2_dmb4f")

[node name="BoomTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_dmb4f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o0tlu")
}

[connection signal="timeout" from="BoomTimer" to="." method="_on_boom_timer_timeout"]
[connection signal="input_event" from="Area2D" to="." method="_on_boom_box_input_event"]
